Explanation for disabled Eureka configuration

--- a/proxy/src/main/resources/application.yaml
+++ b/proxy/src/main/resources/application.yaml
@@ -21,6 +21,7 @@ zuul:
 
 
 # See https://spring.io/guides/gs/routing-and-filtering/
+# Since we do not use eureka for service discovery we have to define url above.
 ribbon:
   eureka:
     enabled: false
