Remote H2 database connection and libraries

--- a/example-application/src/main/resources/application.yaml
+++ b/example-application/src/main/resources/application.yaml
@@ -10,3 +10,8 @@ spring:
 
   application:
     name=config
+
+  datasource:
+    url: jdbc:h2:tcp://localhost//${user.dir}/database
+    username: sa
+    password:
