--- a/example-application/pom.xml
+++ b/example-application/pom.xml
@@ -76,5 +76,16 @@
             <artifactId>logstash-logback-encoder</artifactId>
             <version>4.2</version>
         </dependency>
+
+        <!--Database-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.187</version>
+        </dependency>
     </dependencies>
 </project>
