--- a/example-application/pom.xml
+++ b/example-application/pom.xml
@@ -62,6 +62,25 @@
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
                 </configuration>
             </plugin>
+
+            <!--Schema migration-->
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>4.0.1</version>
+                <configuration>
+                    <url>jdbc:h2:tcp://localhost///Users/mlesniak/Documents/spring-cloud/database;SCHEMA=PUBLIC</url>
+                    <user>sa</user>
+                    <password/>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>1.4.187</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
@@ -86,6 +105,13 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.187</version>
+        </dependency>
+
+        <!--Migration support-->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.0.1</version>
         </dependency>
     </dependencies>
 </project>
